<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_popular"
        android:icon="@drawable/ic_popularity"
        android:title="@string/popular" />
    <item
        android:id="@+id/navigation_toprated"
        android:icon="@drawable/ic_star"
        android:title="@string/toprated" />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_fill"
        android:title="@string/favorite" />
</menu>